Demonstrate 32-character benefits